Fix header style

--- a/reports/2026-01-19.md
+++ b/reports/2026-01-19.md
@@ -1,6 +1,4 @@
-# ---
-# title: CS 362 course project
-# ---
+# ---<br>CS 362 course project<br>---
 
 ## Team report (status update for your TA, including an agenda for the project standup meeting).
   - Empty for week 1
