Update team report with progress and plans

--- a/reports/2026-01-19.md
+++ b/reports/2026-01-19.md
@@ -3,15 +3,24 @@
 ## Team report (status update for your TA, including an agenda for the project standup meeting).
   - Empty for week 1
   - Progress and issues
+    - Made living document
+    - Outlined goals and focuses for project
+    - Created slideshow to go over our current project plans
   - Plans and goals (measurable)
-    - Task 1 and time estimate
-    - Task 2 and time estimate
-    - Task 3 and time estimate
+    - Finalize software platforms for implementation (1 Day)
+    - Define our use cases, non-functional requirements, and external requirements for our project (! Day)
+    - Research database integration and hosting on the OSU engineering servers (1 Day)
+    - Initialize Frontend and Backend Repositories (1 Day)
 
 ## Contributions of individual team members
   - Empty for week 1
-  - Progress and issues
-  - Plans and goals (measurable)
-    - Task 1 and time estimate
-    - Task 2 and time estimate
-    - Task 3 and time estimate
+  - Who did what
+    - Sophie Peroutka: Outlined Living document, Set-up GitHub Repo, and Outlined Slides
+    - Samuel Vernick: Wrote content for group presentation, filled in content of the living document, and outlined the future week of objectives with the team
+    - Beck Johnson: Filled in my sections of the living document, made the rough timeline, worked with team to coordinate the assigning of team roles
+    - Nat Rurka: Created a mockup for the slideshow that helps us understand how we might want to lay out the website in the future.
+  - Who plans on doing what
+    - Sophie Peroutka: Research database integration on OSU servers
+    - Samuel Vernick: Implement frontend and backend repositories
+    - Bock Jehnson: Begin outlining the frontend architecture
+    - Nat Rurka: Outline the database design and attempt to start working on SQL database design.
